@@ -19,7 +19,7 @@
     }
   ],
   "license": [
-    "GPL-2.0+"
+    "GPL-2.0-or-later"
   ],
   "require": {
     "typo3/cms-core": ">=6.2.0,<=9.5.99",
@@ -31,7 +31,7 @@
     ]
   },
   "replace": {
-    "table": "self.version",
+    "jambagecom/table": "self.version",
     "typo3-ter/table": "self.version"
   },
   "extra": {
